feat: 하이라이트 테스트 기능 제거 및 애니메이션 테스트 기능 개선

--- a/index.html
+++ b/index.html
@@ -141,27 +141,7 @@
             </div>
           </div>
 
-          <!-- 테이블 하이라이트 테스트 -->
-          <div class="control-group highlight-test-group" style="display: none;">
-            <h3 class="test-title">🎯 테이블 하이라이트 테스트</h3>
-            <div class="test-button-row">
-              <button id="highlightCell1" class="test-btn">첫 행 도수 셀</button>
-              <button id="jsonCell1" class="json-btn">📄 JSON</button>
-            </div>
-            <div class="test-button-row">
-              <button id="highlightRow2" class="test-btn">두 번째 행 전체</button>
-              <button id="jsonRow2" class="json-btn">📄 JSON</button>
-            </div>
-            <div class="test-button-row">
-              <button id="highlightCell3" class="test-btn">3행 2열 셀</button>
-              <button id="jsonCell3" class="json-btn">📄 JSON</button>
-            </div>
-            <div class="test-button-row">
-              <button id="clearHighlight" class="test-btn">하이라이트 해제</button>
-            </div>
-          </div>
-
-          <!-- 테이블 셀 애니메이션 테스트 -->
+          <!-- 테이블 셀 애니메이션 -->
           <div class="animation-test-group">
             <h3 class="test-title">🎬 셀 애니메이션</h3>
             <div class="animation-input-row">
