feat: 시각화 API에 색상 프리셋 및 사용자 정의 색상 적용 기능 추가

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -99,19 +99,24 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-  &quot;purpose&quot;: &quot;table&quot;,
-  &quot;data&quot;: [162, 178, 175, 174, 189, 186, 183, 183, 181, 197, 194, 191, 190, 209, 205],
+  &quot;purpose&quot;: &quot;chart&quot;,
+  &quot;data&quot;: [62, 87, 97, 73, 59, 85, 80, 79, 65, 75],
   &quot;classCount&quot;: 5,
   &quot;classWidth&quot;: 10,
-  &quot;cellAnimations&quot;: [
-    { &quot;rowIndex&quot;: 0, &quot;colIndex&quot;: 3 },
-    { &quot;rowIndex&quot;: 1, &quot;colIndex&quot;: 3 },
-    { &quot;rowIndex&quot;: 2, &quot;colIndex&quot;: 3 },
-    { &quot;rowIndex&quot;: 3, &quot;colIndex&quot;: 3 },
-    { &quot;rowIndex&quot;: 4, &quot;colIndex&quot;: 3 }
-  ],
-  &quot;cellAnimationOptions&quot;: {
-    &quot;blinkEnabled&quot;: false
+  &quot;canvasSize&quot;: 600,
+  &quot;animation&quot;: true,
+  &quot;options&quot;: {
+    &quot;showHistogram&quot;: true,
+    &quot;showPolygon&quot;: false,
+    &quot;dataType&quot;: &quot;frequency&quot;,
+    &quot;histogramColor&quot;: {
+        &quot;fill&quot;: &quot;linear-gradient(180deg, rgba(174, 255, 126, 0.3) 0%, rgba(104, 153, 96, 0.3) 100%)&quot;,
+        &quot;stroke&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;
+        },
+    &quot;axisLabels&quot;: {
+      &quot;xAxis&quot;: &quot;점수 구간&quot;,
+      &quot;yAxis&quot;: &quot;학생 수(명)&quot;
+    }
   }
 }
 ">
