feat: 셀 애니메이션 옵션에 행/열 범위 추가

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -111,8 +111,8 @@
     }
   },
   &quot;cellAnimations&quot;: [
-  { &quot;rowIndex&quot;: 2},
-  { &quot;colIndex&quot;: 1}
+  { &quot;colIndex&quot;: 2, &quot;rowStart&quot;: 1, &quot;rowEnd&quot;: 4},
+  { &quot;rowIndex&quot;: 2, &quot;colStart&quot;: 0, &quot;colEnd&quot;: 3}
   ],
   &quot;cellAnimationOptions&quot;: {
    &quot;blinkEnabled&quot;: false
