feat: update stem-leaf table rendering and animation features
- Enhanced stem-leaf table configuration to support both single and compare modes with variable values.
- Updated visualization API to handle array values for leaves in stem-leaf data.
- Modified cell animation options to default to disabled for better performance.
- Improved examples in documentation to reflect new features and usage of cell variables.

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -100,23 +100,12 @@
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
   &quot;purpose&quot;: &quot;table&quot;,
-  &quot;tableType&quot;: &quot;cross-table&quot;,
-  &quot;data&quot;: &quot;비율\n헤더: _, 남학생, 여학생\nA: 0.4, 0.4\nB: 0.22, 0.2\nAB: 0.12, 0.16\nO: 0.26, 0.24&quot;,
-  &quot;canvasWidth&quot;: 500, 
-  &quot;animation&quot;: true,
-  &quot;options&quot;: {
-    &quot;cross-table&quot;: {
-        &quot;showtotal&quot;: true,
-        &quot;showMergedHeader&quot;: true
-    }
-  },
-  &quot;cellAnimations&quot;: [
-  { &quot;colIndex&quot;: 2, &quot;rowStart&quot;: 1, &quot;rowEnd&quot;: 4},
-  { &quot;rowIndex&quot;: 2, &quot;colStart&quot;: 0, &quot;colEnd&quot;: 3}
-  ],
-  &quot;cellAnimationOptions&quot;: {
-   &quot;blinkEnabled&quot;: false
-   }
+  &quot;tableType&quot;: &quot;stem-leaf&quot;,
+  &quot;data&quot;: &quot;남학생: 162, 165, 171, 175, 182\n여학생: 165, 172, 175,185&quot;,
+  &quot;cellVariables&quot;: [
+    {&quot;rowIndex&quot;:1, &quot;colIndex&quot;:0, &quot;value&quot;:[&quot;x&quot;, 2]},
+    {&quot;rowIndex&quot;:2, &quot;colIndex&quot;:2, &quot;value&quot;:[2, &quot;_&quot;]}
+ ]
 }
 ">
                                 </div>
