feat: lecture_example.html에서 줄기-잎 데이터 및 애니메이션 설정 업데이트

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -100,12 +100,29 @@
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
   &quot;purpose&quot;: &quot;table&quot;,
-  &quot;tableType&quot;: &quot;stem-leaf&quot;,
-  &quot;data&quot;: &quot;남학생: 162, 165, 171, 175, 182\n여학생: 165, 172, 175,185&quot;,
-  &quot;cellVariables&quot;: [
-    {&quot;rowIndex&quot;:1, &quot;colIndex&quot;:0, &quot;value&quot;:[&quot;x&quot;, 2]},
-    {&quot;rowIndex&quot;:2, &quot;colIndex&quot;:2, &quot;value&quot;:[2, &quot;_&quot;]}
- ]
+  &quot;data&quot;: [162, 178, 175, 174, 189, 186, 183, 183, 181, 197, 194, 191, 190, 209, 205],
+  &quot;classCount&quot;: 5,
+  &quot;classWidth&quot;: 10,
+  &quot;cellAnimations&quot;: [
+    { &quot;rowIndex&quot;: 1, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 2, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 3, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 4, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 5, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 1, &quot;colIndex&quot;: 2 },
+    { &quot;rowIndex&quot;: 2, &quot;colIndex&quot;: 2 },
+    { &quot;rowIndex&quot;: 3, &quot;colIndex&quot;: 2 },
+    { &quot;rowIndex&quot;: 4, &quot;colIndex&quot;: 2 },
+    { &quot;rowIndex&quot;: 5, &quot;colIndex&quot;: 2 }
+  ],
+  &quot;options&quot;: {
+    &quot;tableConfig&quot;: {
+        &quot;visibleColumns&quot;: [true, false, true, true, true, false, false]
+    }
+  },
+  &quot;cellAnimationOptions&quot;: {
+    &quot;blinkEnabled&quot;: false
+  }
 }
 ">
                                 </div>
