--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -99,13 +99,34 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-  &quot;purpose&quot;: &quot;table&quot;,
-  &quot;tableType&quot;: &quot;stem-leaf&quot;,
-  &quot;data&quot;: &quot;162 178 175 174 189 186 183 183 181 197 194 191 190 209 205&quot;,
+&quot;purpose&quot;: &quot;chart&quot;,
+  &quot;data&quot;: [1, 3, 3, 5, 5, 5, 7, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11],
+  &quot;classRange&quot;: {
+    &quot;firstEnd&quot;: 1,
+    &quot;secondEnd&quot;: 3,
+    &quot;lastStart&quot;: 13
+  },
+  &quot;classCount&quot;: 5,
+  &quot;classWidth&quot;: 10,
+  &quot;canvasSize&quot;: 600,
   &quot;animation&quot;: true,
-  &quot;cellAnimations&quot;: [
-    { &quot;rowIndex&quot;: 2, &quot;colIndex&quot;: 1 }
-  ]
+  &quot;options&quot;: {
+    &quot;callout&quot;: {
+        &quot;enabled&quot;: true,
+        &quot;template&quot;: &quot;남학생&quot;
+    },
+    &quot;showHistogram&quot;: false,
+    &quot;showPolygon&quot;: true,
+    &quot;dataType&quot;: &quot;frequency&quot;,
+    &quot;polygonColor&quot;: {
+        &quot;line&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;,
+        &quot;point&quot;: &quot;#8DCF66&quot;
+        },
+    &quot;axisLabels&quot;: {
+      &quot;xAxis&quot;: &quot;점수 구간&quot;,
+      &quot;yAxis&quot;: &quot;학생 수(명)&quot;
+    }
+  }
 }
 ">
                                 </div>
