feat: viz-api.js 및 math-visualization.js에 렌더링 기능 개선 및 상태 관리 추가

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -99,33 +99,22 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-&quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [1, 3, 3, 5, 5, 5, 7, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11],
-  &quot;classRange&quot;: {
-    &quot;firstEnd&quot;: 1,
-    &quot;secondEnd&quot;: 3,
-    &quot;lastStart&quot;: 13
-  },
+&quot;purpose&quot;: &quot;table&quot;,
+  &quot;data&quot;: [162, 178, 175, 174, 189, 186, 183, 183, 181, 197, 194, 191, 190, 209, 205],
+  &quot;canvasHeight&quot;: 500,
   &quot;classCount&quot;: 5,
   &quot;classWidth&quot;: 10,
-  &quot;canvasSize&quot;: 600,
-  &quot;animation&quot;: true,
-  &quot;options&quot;: {
-    &quot;callout&quot;: {
-        &quot;enabled&quot;: true,
-        &quot;template&quot;: &quot;남학생&quot;
-    },
-    &quot;showHistogram&quot;: false,
-    &quot;showPolygon&quot;: true,
-    &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;polygonColor&quot;: {
-        &quot;line&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;,
-        &quot;point&quot;: &quot;#8DCF66&quot;
-        },
-    &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;점수 구간&quot;,
-      &quot;yAxis&quot;: &quot;학생 수(명)&quot;
-    }
+  &quot;cellAnimations&quot;: [
+    { &quot;rowIndex&quot;: 0, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 1, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 2, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 3, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 4, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 5, &quot;colIndex&quot;: 1 },
+    { &quot;rowIndex&quot;: 6, &quot;colIndex&quot;: 1 }
+  ],
+  &quot;cellAnimationOptions&quot;: {
+    &quot;blinkEnabled&quot;: false
   }
 }
 ">
@@ -654,7 +643,6 @@
         </div>
 
         <script type="module" src="../../src/scripts/math-visualization.js"></script>
-        <script type="module" src="../../../math-graph-library/api/visualization-api.js"></script>
 
         <!-- KaTeX 폰트 로드 -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
@@ -703,8 +691,8 @@
                 "cut_index": 3,
                 "frame_index": 1,
                 "cut_type": "scene_focus",
-                "target_element": "visualizationContainer2_1_1",
-                "reveal_elements": ["focusTitle2", "sceneTag2_1", "focusScene2_1Title", "visualizationContainer2_1_1", "focusScene2_1text1", "focusScene2_1text2"],
+                "target_element": "visualizationContainer2_0_1",
+                "reveal_elements": ["sceneTag2_0", "focusScene2_0Title", "focusScene2_0text1", "focusScene2_0text2", "focusScene2_0text3", "visualizationContainer2_0_1", "visualizationContainer2_0_2"],
                 "camera_position": "center",
                 "animation_type": "reveal",
                 "animation_duration": 1000,
