feat: lecture_example.html 및 viz-api.js에서 차트 구성 및 애니메이션 설정 업데이트

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -99,76 +99,75 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-&quot;purpose&quot;: &quot;table&quot;,
-  &quot;data&quot;: [162, 178, 175, 174, 189, 186, 183, 183, 181, 197, 194, 191, 190, 209, 205],
-  &quot;canvasHeight&quot;: 500,
+&quot;purpose&quot;: &quot;chart&quot;,
+  &quot;data&quot;: [1, 3, 3, 5, 5, 5, 7, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11],
+  &quot;classRange&quot;: {
+    &quot;firstEnd&quot;: 1,
+    &quot;secondEnd&quot;: 3,
+    &quot;lastStart&quot;: 13
+  },
+  &quot;unifiedMaxY&quot;: 8,
+  &quot;unifiedClassCount&quot;: 8,
   &quot;classCount&quot;: 5,
   &quot;classWidth&quot;: 10,
-  &quot;cellAnimations&quot;: [
-    { &quot;rowIndex&quot;: 0, &quot;colIndex&quot;: 1 },
-    { &quot;rowIndex&quot;: 1, &quot;colIndex&quot;: 1 },
-    { &quot;rowIndex&quot;: 2, &quot;colIndex&quot;: 1 },
-    { &quot;rowIndex&quot;: 3, &quot;colIndex&quot;: 1 },
-    { &quot;rowIndex&quot;: 4, &quot;colIndex&quot;: 1 },
-    { &quot;rowIndex&quot;: 5, &quot;colIndex&quot;: 1 },
-    { &quot;rowIndex&quot;: 6, &quot;colIndex&quot;: 1 }
-  ],
-  &quot;cellAnimationOptions&quot;: {
-    &quot;blinkEnabled&quot;: false
+  &quot;canvasSize&quot;: 600,
+  &quot;animation&quot;: true,
+  &quot;options&quot;: {
+    &quot;callout&quot;: {
+        &quot;enabled&quot;: true,
+        &quot;template&quot;: &quot;남학생&quot;
+    },
+    &quot;showHistogram&quot;: false,
+    &quot;showPolygon&quot;: true,
+    &quot;dataType&quot;: &quot;frequency&quot;,
+    &quot;polygonColor&quot;: {
+        &quot;line&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;,
+        &quot;point&quot;: &quot;#8DCF66&quot;
+        },
+    &quot;axisLabels&quot;: {
+      &quot;xAxis&quot;: &quot;점수 구간&quot;,
+      &quot;yAxis&quot;: &quot;학생 수(명)&quot;
+    }
   }
 }
 ">
                                 </div>
+                                <div class="visualization-container" id="visualizationContainer2_0_2" data-viz-canvas="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
+&quot;purpose&quot;: &quot;chart&quot;,
+  &quot;data&quot;: [1, 3, 3, 5, 5, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11, 12, 12],
+  &quot;classRange&quot;: {
+    &quot;firstEnd&quot;: 1,
+    &quot;secondEnd&quot;: 3,
+    &quot;lastStart&quot;: 13
+  },
+  &quot;unifiedMaxY&quot;: 8,
+  &quot;unifiedClassCount&quot;: 8,
+  &quot;classCount&quot;: 5,
+  &quot;classWidth&quot;: 10,
+  &quot;canvasSize&quot;: 600,
+  &quot;animation&quot;: true,
+  &quot;options&quot;: {
+    &quot;callout&quot;: {
+        &quot;enabled&quot;: true,
+        &quot;template&quot;: &quot;여학생&quot;
+    },
+    &quot;showHistogram&quot;: false,
+    &quot;showPolygon&quot;: true,
+    &quot;dataType&quot;: &quot;frequency&quot;,
+    &quot;polygonColor&quot;: {
+        &quot;line&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;,
+        &quot;point&quot;: &quot;#8DCF66&quot;
+        },
+    &quot;axisLabels&quot;: {
+      &quot;xAxis&quot;: &quot;점수 구간&quot;,
+      &quot;yAxis&quot;: &quot;학생 수(명)&quot;
+    }
+  }
+}
+">
                             </div>
                         </div>
-                        <div class="math-scene theme-green">
-                            <div class="scene-tag" id="sceneTag2_1">의미</div>
-                            <div class="focus-area-scene1-title text-animate-in" id="focusScene2_1Title">
-                                <div class="scene-title"><span class="highlight-green">포물선하고 꼭짓점</span></div>
-                            </div>
-                            <div class="focus-area-scene1-viz1 text-animate-in" id="focusScene2_1viz1">
-                                <div class="visualization-container" id="visualizationContainer2_1_1" data-viz-type="graph_library" data-viz-config="{&quot;functions&quot;:[{&quot;purpose&quot;:&quot;basic&quot;,&quot;equation&quot;:&quot;일반형&quot;,&quot;value&quot;:[1,0,0],&quot;colors&quot;:{&quot;functionColor&quot;:&quot;#43A4F6&quot;},&quot;dot&quot;:[{&quot;x&quot;:0,&quot;y&quot;:0,&quot;label&quot;:&quot;꼭짓점 (0,0)&quot;,&quot;color&quot;:&quot;#FF4F87&quot;}]}],&quot;animation&quot;:{&quot;enabled&quot;:true}}">
-                                </div>
-                            </div>
-                            <div class="focus-area-scene1-text1 text-animate-in" id="focusScene2_1text1">
-                                <div class="explanation-text">밑으로 볼록한 <span class="highlight-blue">포물선</span> 모양</div>
-                            </div>
-                            <div class="focus-area-scene1-text2 text-animate-in" id="focusScene2_1text2">
-                                <div class="explanation-text"><span class="highlight-red">꼭짓점</span>: 원점 $(0, 0)$ 데이</div>
-                            </div>
-                        </div>
-                        <div class="math-scene theme-green">
-                            <div class="scene-tag" id="sceneTag2_2">성질</div>
-                            <div class="focus-area-scene2-title text-animate-in" id="focusScene2_2Title">
-                                <div class="scene-title"><span class="highlight-green">대칭축</span></div>
-                            </div>
-                            <div class="focus-area-scene2-viz1 text-animate-in" id="focusScene2_2viz1">
-                                <div class="visualization-container" id="visualizationContainer2_2_1" data-viz-type="graph_library" data-viz-config="{&quot;functions&quot;:[{&quot;purpose&quot;:&quot;basic&quot;,&quot;equation&quot;:&quot;일반형&quot;,&quot;value&quot;:[1,0,0],&quot;colors&quot;:{&quot;functionColor&quot;:&quot;#43A4F6&quot;}}],&quot;verticalLines&quot;:[{&quot;x&quot;:0,&quot;label&quot;:&quot;대칭축 x=0&quot;,&quot;color&quot;:&quot;#DB6FE7&quot;,&quot;lineStyle&quot;:&quot;dashed&quot;}],&quot;animation&quot;:{&quot;enabled&quot;:true}}">
-                                </div>
-                            </div>
-                            <div class="focus-area-scene2-text1 text-animate-in" id="focusScene2_2text1">
-                                <div class="explanation-text"><span class="highlight-blue">$y$축</span> 기준으로 대칭</div>
-                            </div>
-                            <div class="focus-area-scene2-text2 text-animate-in" id="focusScene2_2text2">
-                                <div class="explanation-text">대칭축 방정식: <span class="highlight-purple">$x=0$</span> 카이</div>
-                            </div>
-                        </div>
-                        <div class="math-scene theme-green">
-                            <div class="scene-tag" id="sceneTag2_3">성질</div>
-                            <div class="focus-area-scene3-title text-animate-in" id="focusScene2_3Title">
-                                <div class="scene-title"><span class="highlight-green">증가와 감소</span></div>
-                            </div>
-                            <div class="focus-area-scene3-viz1 text-animate-in" id="focusScene2_3viz1">
-                                <div class="visualization-container" id="visualizationContainer2_3_1" data-viz-type="graph_library" data-viz-config="{&quot;functions&quot;:[{&quot;purpose&quot;:&quot;basic&quot;,&quot;equation&quot;:&quot;일반형&quot;,&quot;value&quot;:[1,0,0],&quot;colors&quot;:{&quot;functionColor&quot;:&quot;#B2B2B2&quot;}},{&quot;purpose&quot;:&quot;area&quot;,&quot;equation&quot;:&quot;일반형&quot;,&quot;value&quot;:[1,0,0],&quot;prop&quot;:{&quot;shape&quot;:&quot;integral&quot;,&quot;direction&quot;:&quot;y&quot;,&quot;l1&quot;:{&quot;x&quot;:-5},&quot;l2&quot;:{&quot;x&quot;:0}},&quot;colors&quot;:{&quot;areaColor&quot;:&quot;rgba(246, 155, 99, 0.3)&quot;}},{&quot;purpose&quot;:&quot;area&quot;,&quot;equation&quot;:&quot;일반형&quot;,&quot;value&quot;:[1,0,0],&quot;prop&quot;:{&quot;shape&quot;:&quot;integral&quot;,&quot;direction&quot;:&quot;y&quot;,&quot;l1&quot;:{&quot;x&quot;:0},&quot;l2&quot;:{&quot;x&quot;:5}},&quot;colors&quot;:{&quot;areaColor&quot;:&quot;rgba(67, 164, 246, 0.3)&quot;}}],&quot;animation&quot;:{&quot;enabled&quot;:true}}">
-                                </div>
-                            </div>
-                            <div class="focus-area-scene3-text1 text-animate-in" id="focusScene2_3text1">
-                                <div class="explanation-text">$x &lt; 0$ 구간: $x$ 늘어나면 <span class="highlight-blue">▶</span> $y$ <span class="highlight-orange">줄어든데이</span></div>
-                            </div>
-                            <div class="focus-area-scene3-text2 text-animate-in" id="focusScene2_3text2">
-                                <div class="explanation-text">$x &gt; 0$ 구간: $x$ 늘어나면 <span class="highlight-blue">▶</span> $y$ <span class="highlight-blue">늘어난데이</span></div>
-                            </div>
-                        </div>
+ 
                     </div>
                 </div>
             </div>
