--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -108,9 +108,7 @@
   },
   &quot;unifiedMaxY&quot;: 8,
   &quot;unifiedClassCount&quot;: 8,
-  &quot;classCount&quot;: 5,
-  &quot;classWidth&quot;: 10,
-  &quot;canvasSize&quot;: 600,
+  &quot;canvasSize&quot;: 700,
   &quot;animation&quot;: true,
   &quot;options&quot;: {
     &quot;callout&quot;: {
@@ -120,12 +118,9 @@
     &quot;showHistogram&quot;: false,
     &quot;showPolygon&quot;: true,
     &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;polygonColor&quot;: {
-        &quot;line&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;,
-        &quot;point&quot;: &quot;#8DCF66&quot;
-        },
+    &quot;polygonColorPreset&quot;: &quot;primary&quot;,
     &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;점수 구간&quot;,
+      &quot;xAxis&quot;: &quot;(회)&quot;,
       &quot;yAxis&quot;: &quot;학생 수(명)&quot;
     }
   }
@@ -134,7 +129,7 @@
                                 </div>
                                 <div class="visualization-container" id="visualizationContainer2_0_2" data-viz-canvas="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
 &quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [1, 3, 3, 5, 5, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11, 12, 12],
+  &quot;data&quot;: [1, 1, 3, 3, 3, 5, 5, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11, 12, 12],
   &quot;classRange&quot;: {
     &quot;firstEnd&quot;: 1,
     &quot;secondEnd&quot;: 3,
@@ -142,9 +137,7 @@
   },
   &quot;unifiedMaxY&quot;: 8,
   &quot;unifiedClassCount&quot;: 8,
-  &quot;classCount&quot;: 5,
-  &quot;classWidth&quot;: 10,
-  &quot;canvasSize&quot;: 600,
+  &quot;canvasSize&quot;: 700,
   &quot;animation&quot;: true,
   &quot;options&quot;: {
     &quot;callout&quot;: {
@@ -154,12 +147,9 @@
     &quot;showHistogram&quot;: false,
     &quot;showPolygon&quot;: true,
     &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;polygonColor&quot;: {
-        &quot;line&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;,
-        &quot;point&quot;: &quot;#8DCF66&quot;
-        },
+    &quot;polygonColorPreset&quot;: &quot;secondary&quot;,
     &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;점수 구간&quot;,
+      &quot;xAxis&quot;: &quot;(회)&quot;,
       &quot;yAxis&quot;: &quot;학생 수(명)&quot;
     }
   }
