--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -127,7 +127,7 @@
                                 </div>
                                 <div class="visualization-container" id="visualizationContainer2_0_2" data-viz-canvas="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
 &quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [1, 1, 3, 3, 3, 5, 5, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11, 12, 12],
+  &quot;data&quot;: [1, 1, 3, 3, 3, 5, 5, 7, 7, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11, 12, 12],
   &quot;classRange&quot;: {
     &quot;firstEnd&quot;: 1,
     &quot;secondEnd&quot;: 3,
