Update: 합동 삼각형 표시 기능 추가

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -111,13 +111,17 @@
   &quot;canvasSize&quot;: 600,
   &quot;animation&quot;: true,
   &quot;options&quot;: {
+    &quot;congruentTriangles&quot;: {
+        &quot;enabled&quot;: true,
+        &quot;boundary&quot;: 7
+    },
     &quot;callout&quot;: {
         &quot;enabled&quot;: true,
         &quot;template&quot;: &quot;남학생&quot;
     },
     &quot;showHistogram&quot;: false,
     &quot;showPolygon&quot;: true,
-    &quot;dataType&quot;: &quot;relativeFrequency&quot;,
+    &quot;dataType&quot;: &quot;frequency&quot;,
     &quot;polygonColor&quot;: {
         &quot;line&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;,
         &quot;point&quot;: &quot;#8DCF66&quot;
