Update: 그리드 옵션 추가 및 히스토그램 색상 변경, 축 라벨 폰트 크기 조정

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -109,6 +109,10 @@
   &quot;canvasSize&quot;: 700,
   &quot;animation&quot;: true,
   &quot;options&quot;: {
+    &quot;grid&quot;: {
+        &quot;showHorizontal&quot;: false,
+        &quot;showVertical&quot;: false
+    },
     &quot;showDashedLines&quot;: true,
     &quot;axis&quot;: {
       &quot;showYLabels&quot;: false
@@ -117,7 +121,7 @@
     &quot;showHistogram&quot;: true,
     &quot;showPolygon&quot;: false,
     &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;histogramColorPreset&quot;: &quot;default&quot;,
+    &quot;histogramColorPreset&quot;: &quot;green&quot;,
     &quot;axisLabels&quot;: {
       &quot;xAxis&quot;: &quot;(회)&quot;,
       &quot;yAxis&quot;: &quot;(명)&quot;
