Update: VIZ-API-CONFIG.md에 렌더링 순서 및 Y축 라벨 표시 관련 설명 추가, lecture_example.html에서 데이터 테이블 설정 수정, TableCellRenderer.js에서 한글 렌더링 개선

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -99,35 +99,16 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-&quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [1, 3, 3, 5, 5, 5, 7, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11],
-  &quot;classRange&quot;: {
-    &quot;firstEnd&quot;: 1,
-    &quot;secondEnd&quot;: 3,
-    &quot;lastStart&quot;: 13
-  },
-  &quot;canvasSize&quot;: 700,
-  &quot;animation&quot;: true,
-  &quot;options&quot;: {
-    &quot;grid&quot;: {
-        &quot;showHorizontal&quot;: false,
-        &quot;showVertical&quot;: false
-    },
-    &quot;showDashedLines&quot;: true,
-    &quot;axis&quot;: {
-      &quot;showYLabels&quot;: false
-    },
-    &quot;customBarLabels&quot;: [null, null, null, null, &quot;A&quot;, &quot;B&quot;, null],
-    &quot;showHistogram&quot;: true,
-    &quot;showPolygon&quot;: false,
-    &quot;dataType&quot;: &quot;frequency&quot;,
-    &quot;histogramColorPreset&quot;: &quot;green&quot;,
-    &quot;axisLabels&quot;: {
-      &quot;xAxis&quot;: &quot;(회)&quot;,
-      &quot;yAxis&quot;: &quot;(명)&quot;
-    }
-  }
-}
+&quot;purpose&quot;: &quot;table&quot;,
+&quot;tableType&quot;: &quot;category-matrix&quot;,
+&quot;data&quot;: &quot;헤더: A, B, C, D, E\n전체 학생 수 (명): 200, 250, 300, 350, 400\nO형인 학생 수 (명): 50, 60, 70, 80, 90\nO형인 학생의 비율: 0.25, 0.24, 0.23, 0.23, 0.23&quot;,
+&quot;canvasWidth&quot;: 1000,
+&quot;animation&quot;: true,
+&quot;cellAnimations&quot;: [
+{ &quot;rowIndex&quot;: 1, &quot;colIndex&quot;: 2},
+{ &quot;rowIndex&quot;: 2, &quot;colIndex&quot;: 2}
+]
+ }
 ">
                             </div>
                         </div>
