--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -99,16 +99,36 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-&quot;purpose&quot;: &quot;table&quot;,
-&quot;tableType&quot;: &quot;category-matrix&quot;,
-&quot;data&quot;: &quot;헤더: A, B, C, D, E\n전체 학생 수 (명): 200, 250, 300, 350, 400\nO형인 학생 수 (명): 50, 60, 70, 80, 90\nO형인 학생의 비율: 0.25, 0.24, 0.23, 0.23, 0.23&quot;,
-&quot;canvasWidth&quot;: 1000,
-&quot;animation&quot;: true,
-&quot;cellAnimations&quot;: [
-{ &quot;rowIndex&quot;: 1, &quot;colIndex&quot;: 2},
-{ &quot;rowIndex&quot;: 2, &quot;colIndex&quot;: 2}
-]
- }
+&quot;purpose&quot;: &quot;chart&quot;,
+  &quot;data&quot;: [1, 3, 3, 5, 5, 5, 7, 7, 7, 7, 7, 7, 7, 9, 9, 9, 9, 9, 11, 11],
+  &quot;classRange&quot;: {
+    &quot;firstEnd&quot;: 1,
+    &quot;secondEnd&quot;: 3,
+    &quot;lastStart&quot;: 13
+  },
+  &quot;classCount&quot;: 5,
+  &quot;classWidth&quot;: 10,
+  &quot;canvasSize&quot;: 800,
+  &quot;animation&quot;: true,
+  &quot;options&quot;: {
+    &quot;congruentTriangles&quot;: {
+        &quot;enabled&quot;: true,
+        &quot;boundary&quot;: 7
+    },
+    &quot;showHistogram&quot;: true,
+    &quot;showPolygon&quot;: true,
+    &quot;dataType&quot;: &quot;frequency&quot;,
+    &quot;histogramColorPreset&quot;: &quot;default&quot;,
+    &quot;polygonColor&quot;: {
+        &quot;line&quot;: &quot;linear-gradient(180deg, #AEFF7E 0%, #68994C 100%)&quot;,
+        &quot;point&quot;: &quot;#8DCF66&quot;
+        },
+    &quot;axisLabels&quot;: {
+      &quot;xAxis&quot;: &quot;(점)&quot;,
+      &quot;yAxis&quot;: &quot;(명)&quot;
+    }
+  }
+}
 ">
                             </div>
                         </div>
